Fixed track title wrapping (issue 34)

--- a/static/style.css
+++ b/static/style.css
@@ -467,22 +467,29 @@ ol.tracks {
     counter-increment: item;
     width: 1.1em;
     text-align: right;
+    vertical-align: top;
     padding-right: 0.15em;
     color: #aaa;
-    background: rgba(250,250,250, 0.4);
-    background: linear-gradient(to right, rgba(250,250,250, 1) 0%, rgba(250,250,250, 0) 100%);
+}
+
+.track-title {
+    display: inline-block;
+    max-width: 21em;
 }
 
 .tracks time {
     line-height: 1.3em;
 	float: right;
     color: #aaa;
-    background: rgba(250,250,250, 0.4);
-    background: linear-gradient(to left, rgba(250,250,250, 1) 0%, rgba(250,250,250, 0) 50%);
 }
 
 .tracks li:not(.total):nth-child(2n) {
-    background-color: rgba(0, 0, 0, 0.03);
+    background: rgba(0,0,0, 0.03);
+    background: linear-gradient(to right,
+        rgba(0,0,0, 0)    0%,
+        rgba(0,0,0, 0.03) 1.1em,
+        rgba(0,0,0, 0.03) 95%,
+        rgba(0,0,0, 0)    100%);
 }
 
 .tracks li:only-child {
